Update sentTracker.java
integer constructor deprecation fix